[package]
name = "reloadable-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/MOZGIII/rustls-cert-utils"
description = """
A generic reloadable state management core traits.
"""
keywords = ["utils", "state", "arc", "arc-swap"]
categories = ["caching"]
readme = "../../README.md"

[dependencies]
