[package]
name = "rustls-cert-file-reader"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/MOZGIII/rustls-cert-utils"
description = """
A rustls certificate chain and private key file reader.
"""
keywords = ["rustls", "utils", "certs"]
categories = ["filesystem"]
readme = "../../README.md"

[dependencies]
rustls-cert-read = { version = "0.1", path = "../rustls-cert-read" }

async-trait = "0.1"
rustls-pemfile = "2"
rustls-pki-types = "1.3"
thiserror = "1"
tokio = { version = "1", features = ["fs"] }
