[package]
name = "rustls-cert-reloadable-resolver"
version = "0.5.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/MOZGIII/rustls-cert-utils"
description = """
A reloadable certificate resolver for rustls.
"""
keywords = ["rustls", "utils", "certs"]
categories = ["network-programming"]
readme = "../../README.md"

[dependencies]
reloadable-state = { version = "0.1", path = "../reloadable-state" }
rustls-cert-read = { version = "0.3", path = "../rustls-cert-read" }

async-trait = "0.1"
futures-util = { version = "0.3", default-features = false }
rustls = "0.22"
thiserror = "1"
