[package]
name = "rustls-cert-reloadable-resolver"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/MOZGIII/rustls-cert-utils"
description = """
A reloadable certificate resolver for rustls.
"""
keywords = ["rustls", "utils", "certs"]
categories = ["network-programming"]
readme = "../../README.md"

[dependencies]
rustls-cert-read = { version = "0.1", path = "../rustls-cert-read" }
rustls-cert-reloadable = { version = "0.1", path = "../rustls-cert-reloadable" }

async-trait = "0.1"
rustls = "0.21"
thiserror = "1"
tokio = { version = "1", features = ["macros"] }
