[package]
name = "rustls-cert-reloadable"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/MOZGIII/rustls-cert-utils"
description = """
A generic reloadable state manager.
"""
keywords = ["utils", "state", "arc", "arc-swap"]
categories = ["utils"]
readme = "../../README.md"

[dependencies]
arc-swap = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
